Work with filter stream and data type